--- a/css/style.css
+++ b/css/style.css
@@ -206,8 +206,7 @@ body {
   text-transform: uppercase;
   font-size: 28px;
   font-weight: 600;
-  max-width: 165px;
-  margin: 0 auto;
+  text-align: center;
 }
 
 .portraits-item__text {
@@ -352,6 +351,7 @@ body {
   background-image: url(../images/examples/black_dot.svg);
   background-size: cover;
   height: 20px;
+  color: black;
   width: 20px;
   border: transparent;
   margin-right: 30px;
