--- a/scss/style.scss
+++ b/scss/style.scss
@@ -193,8 +193,7 @@ body {
     text-transform: uppercase;
     font-size: 28px;
     font-weight: 600;
-    max-width: 165px;
-    margin: 0 auto;
+    text-align: center;
 }
 .portraits-item__text {
     font-size: 20px;
@@ -341,6 +340,7 @@ body {
         background-image: url(../images/examples/black_dot.svg);
         background-size: cover;
         height: 20px;
+        color: black;
         width: 20px;
         border: transparent;
         margin-right: 30px;
