--- a/scss/style.scss
+++ b/scss/style.scss
@@ -324,24 +324,23 @@ body {
 }
 .slider__item-img {
     margin: 0 auto;
-    width: 30%;
+    width: 33%;
 }
 .slick-dots {
     position: absolute;
     padding: 0;
-    bottom: -11%;
     left: 52%;
     transform: translateX(-50%);
     display: flex;
     list-style-type: none;
-    top: 100%;
+    top: 96%;
     button {
         background-color: transparent;
         background-image: url(../images/examples/black_dot.svg);
         background-size: cover;
-        height: 20px;
+        height: 15px;
         color: black;
-        width: 20px;
+        width: 15px;
         border: transparent;
         margin-right: 30px;
         cursor: pointer;
@@ -352,11 +351,42 @@ body {
         background-color: transparent;
         background-image: url(../images/examples/red_dot.svg);
         background-size: cover;
-        height: 20px;
-        width: 20px;
+        height: 15px;
+        width: 15px;
         border: transparent;
         margin-right: 30px;
         color: transparent;
+    }
+}
+@media (max-width: 2560px) {
+    .slider__item-img {
+        width: 52%;
+    }
+}
+@media (max-width: 2454px) {
+    .slider__item-img {
+        width: 44%;
+    }
+}
+@media (max-width: 2214px) {
+    .slider__item-img {
+        width: 38%;
+    }
+}
+@media (max-width: 2017px) {
+    .slider__item-img {
+        width: 32%;
+    }
+}
+@media (max-width: 1900px) {
+    .slider__item-img {
+        margin: 0 auto;
+        width: 33%;
+    }
+}
+@media (max-width: 1862px) {
+    .slider__item-img {
+        width: 30%;
     }
 }
 @media (max-width: 1795px) {
@@ -373,24 +403,33 @@ body {
         padding-bottom: 20%;
     }
 }
+@media (max-width: 1483px) {
+    .slider__item-img {
+        width: 30%;
+    }
+}
 @media (max-width: 1250px) {
     .examples {
         padding-bottom: 30%;
     }
+    .slick-dots {
+        top: 96%;
+    }
 }
 @media (max-width: 1138px) {
     .slider__item-img {
-        width: 32%;
+        width: 34%;
     }
     .examples {
         margin-bottom: -5%;
     }
 }
-@media (max-width: 990px) {
+@media (max-width: 1024px) {
     .slider__item-img {
-        margin: 0 auto;
-        width: 37%;
+        width: 38%;
     }
+}
+@media (max-width: 990px) {
 }
 @media (max-width: 900px) {
     .examples {
@@ -673,8 +712,7 @@ body {
 .opinion {
     margin-bottom: 80px;
 }
-.container {
-}
+
 .opinion__inner {
     display: flex;
     justify-content: space-between;
@@ -694,11 +732,38 @@ body {
 .opinion__content-text {
 }
 .opinion__content-footer {
+    font-size: calc(12px + (24 - 12) * ((100vw - 320px) / (1900 - 320)));
 }
 .opinion__img {
     border-top-right-radius: 80px;
     border-bottom-right-radius: 80px;
     width: 100%;
+}
+@media (min-width: 2127px) {
+    .opinion__content {
+        padding-top: 53px;
+    }
+}
+@media (min-width: 1901px) {
+    .opinion__content {
+        align-items: center;
+        max-width: 584px;
+        padding: 33px 56px;
+        padding-top: 106px;
+        border: 3px dashed white;
+        border-top-left-radius: 80px;
+        border-bottom-left-radius: 80px;
+        border-right: none;
+        margin-right: 0;
+        font-size: calc(26px + (29 - 26) * ((100vw - 320px) / (1900 - 320)));
+    }
+    .opinion__img {
+        height: 100%;
+        width: 100%;
+    }
+    .opinion__content-footer {
+        font-size: calc(12px + (24 - 12) * ((100vw - 320px) / (1900 - 320)));
+    }
 }
 @media (max-width: 1024px) {
     .opinion__content {
@@ -717,7 +782,6 @@ body {
         padding: 20px 30px;
         margin: 0 auto;
     }
-
 }
 
 .footer {
@@ -748,7 +812,8 @@ body {
     font-size: calc(12px + (20 - 12) * ((100vw - 320px) / (1900 - 320)));
     span {
         color: #DC0D15;
-        font-weight: 700;
+        font-weight: 900;
+        font-size: calc(14px + (24 - 14) * ((100vw - 320px) / (1900 - 320)));
     }
     text-align: center;
 }
@@ -789,7 +854,6 @@ body {
     .footer__content-text {
         padding-bottom: 20px;
         padding-left: 0;
-        font-size: calc(18px + (20 - 18) * ((100vw - 320px) / (1900 - 320)));
         span {
             color: #DC0D15;
             font-weight: 700;
@@ -802,7 +866,4 @@ body {
     .footer__content-item {
         padding-left: 2px;
     }
-}
-@media (max-width: 425px) {
-    
 }
