--- a/scss/style.scss
+++ b/scss/style.scss
@@ -329,7 +329,7 @@ body {
 .slick-dots {
     position: absolute;
     padding: 0;
-    left: 52%;
+    left: 51%;
     transform: translateX(-50%);
     display: flex;
     list-style-type: none;
@@ -342,7 +342,7 @@ body {
         color: black;
         width: 15px;
         border: transparent;
-        margin-right: 30px;
+        margin-right: 20px;
         cursor: pointer;
     }
 }
@@ -354,7 +354,7 @@ body {
         height: 15px;
         width: 15px;
         border: transparent;
-        margin-right: 30px;
+        margin-right: 20px;
         color: transparent;
     }
 }
@@ -413,8 +413,9 @@ body {
         padding-bottom: 30%;
     }
     .slick-dots {
-        top: 96%;
+        top: 98%;
     }
+    
 }
 @media (max-width: 1138px) {
     .slider__item-img {
@@ -426,7 +427,7 @@ body {
 }
 @media (max-width: 1024px) {
     .slider__item-img {
-        width: 38%;
+        width: 36%;
     }
 }
 @media (max-width: 990px) {
@@ -449,9 +450,6 @@ body {
         width: 100%;
         margin-top: -450px;
         padding-bottom: 30%;
-    }
-    .slick-dots {
-        left: 53%;
     }
 }
 @media (max-width: 638px) {
@@ -483,7 +481,7 @@ body {
         padding-bottom: 60%;
     }
     .slider__item-img {
-        width: 100%;
+        width: 75%;
     }
     .slick-dots {
         left: 54%;
@@ -511,23 +509,24 @@ body {
             color: transparent;
         }
     }
-    .slider__item-img {
-        margin: 0 auto;
-        width: 70%;
-    }
 }
 @media (max-width: 375px) {
     .slick-dots {
-        top: 95%;
+        top: 87%;
     }
     .slider__item-img {
         padding-bottom: 22%;
     }
+    .slider__item-img {
+        width: 78%;
+    }
 }
 .result {
     background-image: url(../images/result/result_bg.jpg);
-    
+    background-size: cover;
     margin-top: -12%;
+    margin-bottom: 80px;
+    padding-bottom: 23%;
 }
 
 .result__inner {
@@ -601,9 +600,7 @@ body {
     height: 50px;
     color: transparent;
 }
-.result {
-    margin-bottom: 80px;
-}
+
 .container {
 }
 .result__inner {
@@ -710,6 +707,7 @@ body {
     }
 }
 .opinion {
+    margin-top: -19%;
     margin-bottom: 80px;
 }
 
@@ -718,6 +716,7 @@ body {
     justify-content: space-between;
 }
 .opinion__content {
+    background-color: black;
     max-width: 584px;
     padding: 80px 100px;
     border: 3px dashed white;
@@ -732,24 +731,19 @@ body {
 .opinion__content-text {
 }
 .opinion__content-footer {
-    font-size: calc(12px + (24 - 12) * ((100vw - 320px) / (1900 - 320)));
+    font-size: calc(10px + (20 - 1) * ((100vw - 320px) / (1900 - 320)));
 }
 .opinion__img {
     border-top-right-radius: 80px;
     border-bottom-right-radius: 80px;
     width: 100%;
 }
-@media (min-width: 2127px) {
-    .opinion__content {
-        padding-top: 53px;
-    }
-}
+
 @media (min-width: 1901px) {
     .opinion__content {
         align-items: center;
         max-width: 584px;
-        padding: 33px 56px;
-        padding-top: 106px;
+        padding: 106px 56px 33px 56px;
         border: 3px dashed white;
         border-top-left-radius: 80px;
         border-bottom-left-radius: 80px;
@@ -762,7 +756,13 @@ body {
         width: 100%;
     }
     .opinion__content-footer {
-        font-size: calc(12px + (24 - 12) * ((100vw - 320px) / (1900 - 320)));
+        font-size: calc(10px + (20 - 10) * ((100vw - 320px) / (1900 - 320)));
+    }
+}
+@media (min-width: 2128px) {
+    .opinion__content {
+        padding-top: 53px;
+
     }
 }
 @media (max-width: 1024px) {
@@ -800,22 +800,27 @@ body {
 .footer__content {
     display: flex;
     justify-content: space-between;
+    padding-right: 30px;
 }
 .footer__content-item {
-   
+
 }
 .footer__content-img {
-    padding-left: 30px;
+    padding-left: 16%;
 }
 .footer__content-text {
     padding-left: 30px;
     font-size: calc(12px + (20 - 12) * ((100vw - 320px) / (1900 - 320)));
     span {
         color: #DC0D15;
-        font-weight: 900;
         font-size: calc(14px + (24 - 14) * ((100vw - 320px) / (1900 - 320)));
     }
     text-align: center;
+}
+@media (min-width: 2150px) {
+    .footer__content-img {
+        padding-left: 21%;
+    }
 }
 @media (max-width: 1180px) {
     .footer__content {
@@ -856,7 +861,6 @@ body {
         padding-left: 0;
         span {
             color: #DC0D15;
-            font-weight: 700;
         }
         text-align: center;
     }
