--- a/scss/style.scss
+++ b/scss/style.scss
@@ -132,6 +132,14 @@ body {
     .header__tasks {
         margin-top: -19%;
     }
+    .tasks__text {
+        text-align: center;
+        font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1900 - 320)));
+    }
+    .title {
+        padding: 0 30px;
+        font-size: calc(25px + (25 - 25) * ((100vw - 320px) / (1900 - 320)));
+    }
 }
 @media (max-width: 530px) {
     .logo {
@@ -151,10 +159,10 @@ body {
 }
 @media (max-width: 425px) {
     .logo {
-        
+        margin-top: -46%;
+        margin-bottom: 117%;
     }
 }
-
 
 .portraits__content {
     display: flex;
@@ -215,6 +223,7 @@ body {
 @media (max-width: 768px) {
     .portraits__text {
         text-align: center;
+        font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1900 - 320)));
     }
     .portraits__content {
         flex-wrap: wrap;
@@ -306,6 +315,7 @@ body {
 @media (max-width: 768px) {
     .decision__text {
         text-align: center;
+        font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1900 - 320)));
     }
 }
 
@@ -325,6 +335,11 @@ body {
 .title {
 }
 .examples__text {
+}
+@media (max-width: 768px) {
+    .examples__text {
+        font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1900 - 320)));
+    }
 }
 .slider {
     position: relative;
@@ -663,12 +678,15 @@ body {
     }
     .result__text {
         text-align: center;
-        font-size: calc(20px + (35 - 20) * ((100vw - 320px) / (1900 - 320)));
+        font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1900 - 320)));
     }
     .result__list {
         display: block;
         max-width: 60%;
         margin: 0 auto;
+    }
+    .result__item1, .result__item2, .result__item3 {
+        font-size: calc(15px + (20 - 15) * ((100vw - 320px) / (1900 - 320)));
     }
     .result__item3::before {
         left: -10%;
@@ -752,7 +770,7 @@ body {
 .opinion__content-text {
 }
 .opinion__content-footer {
-    font-size: calc(10px + (20 - 1) * ((100vw - 320px) / (1900 - 320)));
+    font-size: calc(15px + (20 - 15) * ((100vw - 320px) / (1900 - 320)));
 }
 .opinion__img {
     border-top-right-radius: 80px;
@@ -777,7 +795,7 @@ body {
         width: 100%;
     }
     .opinion__content-footer {
-        font-size: calc(10px + (20 - 10) * ((100vw - 320px) / (1900 - 320)));
+        font-size: calc(15px + (20 - 15) * ((100vw - 320px) / (1900 - 320)));
     }
 }
 @media (min-width: 2128px) {
@@ -794,7 +812,7 @@ body {
         width: 30%;
     }
 }
-@media (max-width: 750px) {
+@media (max-width: 768px) {
     .opinion__img {
         display: none;
     }
@@ -802,6 +820,13 @@ body {
         border: none;
         padding: 20px 30px;
         margin: 0 auto;
+    }
+    .opinion__content-text {
+        text-align: center;
+        font-size: calc(20px + (20 - 20) * ((100vw - 320px) / (1900 - 320)));
+    }
+    .opinion__content-footer {
+        text-align: center;
     }
 }
 
