--- a/scss/style.scss
+++ b/scss/style.scss
@@ -481,8 +481,8 @@ body {
         background-repeat: no-repeat;
         background-position: 0% 20%;
         width: 100%;
-        margin-top: -450px;
-        padding-bottom: 35%;
+        margin-top: -53%;
+        padding-bottom: 99%;
     }
 }
 @media (max-width: 768px) {
@@ -515,19 +515,20 @@ body {
         left: 52%;
         button {
             background-image: url(../images/examples/black_dot.svg);
-            height: 15px;
-            width: 15px;
+            height: 67%;
+            width: 36%;
             margin-right: 12px;
             cursor: pointer;
-     
+            color: transparent;
         }
     }
     .slick-active {
         button {
             background-image: url(../images/examples/red_dot.svg);
-            height: 14px;
-            width: 14px;
+            height: 67%;
+            width: 36%;
             margin-right: 12px;
+            color: transparent;
         }
     }
 }
@@ -657,6 +658,9 @@ body {
     color: #DC0D15;
 }
 @media (max-width: 900px) {
+    .result {
+        margin-top: -70%;
+    }
     .impressions {
         width: 70%;
     }
