--- a/scss/style.scss
+++ b/scss/style.scss
@@ -517,6 +517,7 @@ body {
             background-color: black;
             width: 5px;
             height: 12px;
+            padding-bottom: 5px;
             border-radius: 50%;
             margin-right: 10px;
             cursor: pointer;
@@ -530,6 +531,7 @@ body {
             height: 12px;
             margin-right: 10px;
             color: transparent;
+            padding-bottom: 5px;
         }
     }
 }
