--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: #000;
-  font-family: 'Gilroy';
+  font-family: "Gilroy";
   letter-spacing: 0.01em;
   overflow-x: hidden;
 }
@@ -47,7 +47,7 @@ body {
 .title {
   font-weight: 500;
   font-size: calc(20px + (40 - 20) * ((100vw - 320px) / (1900 - 320)));
-  color: #DC0D15;
+  color: #dc0d15;
 }
 
 .container {
@@ -183,8 +183,8 @@ body {
 }
 
 .portraits-item {
-  background: -webkit-gradient(linear, left top, left bottom, from(#DC0D15), to(#DC0D1500));
-  background: linear-gradient(to bottom, #DC0D15 0%, #DC0D1500 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#dc0d15), to(#dc0d1500));
+  background: linear-gradient(to bottom, #dc0d15 0%, #dc0d1500 100%);
   border-top-left-radius: 77px;
   border-top-right-radius: 77px;
   text-align: center;
@@ -399,26 +399,25 @@ body {
 }
 
 .slick-dots button {
-  background-color: transparent;
-  background-image: url(../images/examples/black_dot.svg);
-  background-size: cover;
+  background-color: black;
   height: 15px;
   color: black;
   width: 15px;
   border: transparent;
   margin-right: 20px;
   cursor: pointer;
+  font-size: 1px;
+  border-radius: 50%;
 }
 
 .slick-active button {
-  background-color: transparent;
-  background-image: url(../images/examples/red_dot.svg);
-  background-size: cover;
+  background-color: #dc0d15;
   height: 15px;
   width: 15px;
   border: transparent;
   margin-right: 20px;
   color: transparent;
+  border-radius: 50%;
 }
 
 @media (max-width: 2560px) {
@@ -547,22 +546,12 @@ body {
     left: 52%;
   }
   .slick-dots button {
-    background-color: black;
-    width: 12px;
     height: 12px;
-    padding-bottom: 12px;
-    border-radius: 50%;
-    margin-right: 10px;
-    cursor: pointer;
-    color: transparent;
+    width: 12px;
   }
   .slick-active button {
-    background-color: #DC0D15;
-    width: 12px;
     height: 12px;
-    margin-right: 10px;
-    color: transparent;
-    padding-bottom: 12px;
+    width: 12px;
   }
 }
 
@@ -597,7 +586,7 @@ body {
 }
 
 .result__item1 span {
-  color: #DC0D15;
+  color: #dc0d15;
   font-size: 40px;
 }
 
@@ -618,7 +607,7 @@ body {
 }
 
 .result__item2 span {
-  color: #DC0D15;
+  color: #dc0d15;
   font-size: 40px;
 }
 
@@ -639,7 +628,7 @@ body {
 }
 
 .result__item3 span {
-  color: #DC0D15;
+  color: #dc0d15;
   font-size: 40px;
 }
 
@@ -665,7 +654,7 @@ body {
 }
 
 .result__text span {
-  color: #DC0D15;
+  color: #dc0d15;
 }
 
 .result__content {
@@ -693,7 +682,7 @@ body {
 .content-reuslt__fact {
   font-size: calc(12px + (20 - 12) * ((100vw - 320px) / (1900 - 320)));
   font-weight: 400;
-  color: #DC0D15;
+  color: #dc0d15;
 }
 
 @media (max-width: 900px) {
@@ -718,7 +707,9 @@ body {
     max-width: 60%;
     margin: 0 auto;
   }
-  .result__item1, .result__item2, .result__item3 {
+  .result__item1,
+  .result__item2,
+  .result__item3 {
     font-size: calc(15px + (20 - 15) * ((100vw - 320px) / (1900 - 320)));
   }
   .result__item3::before {
@@ -925,7 +916,7 @@ body {
 
 .footer__content-text span {
   font-weight: 700;
-  color: #DC0D15;
+  color: #dc0d15;
   font-size: calc(14px + (24 - 14) * ((100vw - 320px) / (1900 - 320)));
 }
 
